fixed overflow on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inspiration&display=swap');
 
-html {
-  height: 100vh;
-}
 
 body {
   padding: 0;
@@ -12,6 +9,7 @@ body {
   height: 100vh;
   font-family: 'Chewy', cursive;
   letter-spacing: 1px;
+  overflow: hidden;
 }
 
 #main {
